feat(response): support sequential media types jsonl and json-seq
